--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,12 @@
       {{ page.title }} &middot; {{ site.title }}
     {% endif %}
   </title>
+  
+{% if page.description %}
+  <meta name="description" content="{{page.description}}" />
+{% else if page.title == "Home"%}
+  <meta name="description" content="Мы наглядно объясняем стартапы и предпринимательство с помощью инфографик." />
+{% endif %}
 
   <!-- CSS -->
   <link rel="stylesheet" href="/public/css/poole.css">
@@ -25,4 +31,9 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+  
+  <!-- Google authorship -->
+  <link rel="author" href="https://plus.google.com/+AnnaVital"/>
+  <link rel="publisher" href="https://plus.google.com/108895849991099006130"/>
+  
 </head>
