--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,3 +23,20 @@ layout: default
     {% endfor %}
   </ul>
 </div>
+
+<section class="paging">
+  {% if page.previous %}
+    <div class="left">
+      <a href="{{ page.previous.url }}">
+        ◀
+      </a>
+    </div>
+  {% endif %}
+  {% if page.next %}
+    <div class="right">
+      <a href="{{page.next.url}}">
+        ▶︎
+      </a>
+    </div>
+  {% endif %}
+</section>
