--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,7 @@
   <meta name="description" content="{{page.description}}" />
 {% else if page.title == "Home"%}
   <meta name="description" content="Мы наглядно объясняем стартапы и предпринимательство с помощью инфографик." />
+  <meta name='yandex-verification' content='658d1d52d3cd00b0' />
 {% endif %}
 
   <!-- CSS -->
