--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,12 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
+  <span class="post-date">
+  {% if page.previous %}
+    <a class="mobile-prev-page" href="{{ page.previous.url }}" title="Предыдущий пост: {{ page.previous.title }}">◀</a> &nbsp;
+  {% endif %}
+  {{ page.date | date_to_string }}
+  </span>
   {{ content }}
 </div>
 
@@ -27,14 +32,14 @@ layout: default
 <section class="paging">
   {% if page.previous %}
     <div class="left">
-      <a href="{{ page.previous.url }}">
+      <a href="{{ page.previous.url }}" title="Предыдущий пост: {{ page.previous.title }}">
         ◀
       </a>
     </div>
   {% endif %}
   {% if page.next %}
     <div class="right">
-      <a href="{{page.next.url}}">
+      <a href="{{page.next.url}}" title="Следующий пост: {{ page.next.title }}">
         ▶︎
       </a>
     </div>
