Added VKontakte link

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,6 +27,7 @@
 
     <a class="sidebar-nav-item" href="http://facebook.com/fundersandfounders" title="Посетить нашу Фейсбук страницу (на английском)" target="_blank">Фейсбук</a>
     <a class="sidebar-nav-item" href="http://twitter.com/fundersfounders" title="Посетить наш Твиттер (на английском)" target="_blank">Твиттер</a>
+    <a class="sidebar-nav-item" href="http://vk.com/fundersandfounders" title="Посетить нашу групу ВКонтакте" target="_blank">ВКонтакте</a>
   </nav>
 
   <div class="sidebar-item">
