--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,6 +9,7 @@
   </div>
 
   <nav class="sidebar-nav">
+    <a class="sidebar-nav-item" href="https://adioma.com">Adioma - генератор инфографик</a>
     <a class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}" href="/">Домой</a>
 
     {% comment %}
