--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,9 @@
     <div class="wrap">
       <div class="masthead">
         <div class="container">
+		<div style="float: right; font-size: 14px; margin: 5px 10px 0 0;">
+			<a href="https://adioma.com" title="перейти на Adioma - генератор инфографик">сделай инфографику на Adioma</a>
+		</div>
           <h3 class="masthead-title">
             <a href="/" title="Home">{{ site.title }}</a>
             <small>{{ site.tagline }}</small>
